# Desktop-IPod

./: .gitignore  README.md  docker-compose.yml  index.html  init.sql  main.js  package.json  script.js  seed.sql  style.css
backend/: pyproject.toml
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: liked_tracks.py  recent_plays.py  recommendations.py
